fixed: overflow of words in tasks on board

--- a/css/general.css
+++ b/css/general.css
@@ -260,6 +260,10 @@ body {
     color: var(--secondary-color);
 }
 
+.overflow-anywhere {
+    overflow-wrap: anywhere;
+}
+
 .border-radius-8 {
     border-radius: 8px;
 }
